[fix] center member cards on mobile

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -198,5 +198,6 @@
 @media (max-width: 768px) {
   .members-grid {
     grid-template-columns: 1fr;
+    justify-items: center;
   }
 }
